[package]
authors = ["Victor Koenders <victor.koenders@gmail.com>"]
edition = "2018"
name = "stm32f103"
version = "0.1.0"

[dependencies]
cortex-m = "0.5.8"
cortex-m-rt = "0.6.7"
cortex-m-semihosting = "0.3.2"
panic-abort = "0.3.1"
panic-semihosting = "0.5.1"
nb = "0.1.1"
stm32f103xx-hal = {git = "https://github.com/japaric/stm32f103xx-hal"}
embedded-hal = "0.2.2" 
arrayref = "0.3"

# this lets you use `cargo fix`!
[[bin]]
name = "stm32f103"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
